создал новый документ

--- a/index.html
+++ b/index.html
@@ -1,99 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
-    <meta author="Иван Рубаник">
+    <meta author ="Ivan Rubanik">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новый проект</title>
+    <title>Document HTML</title>
 </head>
-
 <body>
-     <!-- alt+tab переключение окон  -->
-     <!-- alt+shift+f отформотировать  -->
-
-    <!-- crt+f поиск -->
-       <!----<!- ctr+/ -->
-        <!-- Это заголовоко первого уровня -->
-        
-        <p><b>Привет мир</b></p>
-        <h1>Сказка</h1>
-        <p>
-            <i>
-                <b>
-                    <u>
-                        <s>Детство каждому</s></u></i></b> <strong>человеку</strong> дано разное: кому-то безоблачное,
-            кому-то посложнее. Но практически каждый взрослый всю жизнь несёт в памяти от первых лет жизни одно и то же.
-            Это, конечно, сказки. Из поколения в поколение переходит традиция: вечером ребёнок выбирает книжку, и папа
-            или мама принимаются за чтение. Сказка — тот самый параллельный мир, в который даже взрослые охотно бегут от
-            непростых или скучных реалий. Это фантазия, где сильные и справедливые герои легко побеждают любое зло.
-            человеку дано разное: кому-то безоблачное, кому-то посложнее. Но практически каждый взрослый всю жизнь несёт
-            в памяти от первых лет жизни одно и то же. Это, конечно, сказки. Из поколения в поколение переходит
-            традиция: вечером ребёнок выбирает книжку, и папа или мама принимаются за чтение. Сказка — тот самый
-            параллельный мир, в который даже взрослые охотно бегут от непростых или скучных реалий. Это фантазия, где
-            сильные и справедливые герои легко побеждают любое зло.</p>
-        <h2>Заголовок 1</h2>
-        <h3>Заголовок 1</h3>
-        <h4>Заголовок 1</h4>
-        <h5>Заголовок 1</h5>
-        <p>H<sub>2</sub>O</p>
-        <p>100 km<sup>2</sup></p>
-
-        <ul>
-            <li>первый</li>
-            <li>второй</li>
-            <ul>
-                <li>третий</li>
-            </ul>
-            <a href=""></a>
-
-        </ul>
-
-        <a target="_blank" href="https://instagram.com/mario__bit?utm_medium=copy_link">mario.bit inst</a><br>
-        <a href="документ.pdf">ссылка на документ</a><br>
-        <br>
-        <a href="tel:+375257141338">+375257141338</a><br>
-        <br>
-        <a download href="документ.pdf">скачать документ</a>
+    <div>
+<h1>Жизнь в польше</h1>
 
 
+<p> Весной мы вместе с Яной уехали в Польшу. Пожили там 6 месяцев, открыли ресторан. <span style="color:red">Нихрена не получилось</span> , пожтому приехали оратно в "страну для жизни"</p>
 
-</body><br><br>
-
-<!-- изорание -->
-
-<body>
+    </div>
 
 
+    <div style="color: aqua;"> 
+<h2>Возвращение домой</h2>
+<p>
+    <img src="https://u01.appmifile.com/images/2018/08/25/2bbb6a34-37d7-4daa-8bbd-fef873457d83.jpg" width="200" alt=""><br>
+Люимый котик
+</p>
+<p>
+    <img src="dom.webp" width="200" alt=""> <br>
+    наш дом
+</p>
+    </div>
 
-    <img src="https://www.meme-arsenal.com/memes/0a3f4e92378dd214ec46ca5496ec82ab.jpg" alt="красивый котик"
-        height="300px">
-
-
-
-
+    <div>
+<a href="https://kinogoo.cc/4486-film-hroniki-narnii-princ-kaspian-2008-smotret-online-na-kinogo.html"> ссылка на фильм "киного"</a>
+ 
+<ul>первый
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+</ul>
+<video src="https://www.youtube.com/watch?v=RpjQGMrV7m0">веселый Барыс</video>
+    </div>
 </body>
-
-
-<body>
-    <!-- таблицы -->
-
-    <table>
-        <tr>
-            <th>заголовок</th>
-            <th>заголовок</th>
-        </tr>
-    </table>
-
-</body>
-
-
-<body>
-
-    <p contenteditable="_true_"> очень, очень красивый котик</p>
-
-
-</body>
-
 </html>
